# djlib-doctor

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_v0.1.0.md  SECURITY.md  llms-full.txt  llms.txt  pyproject.toml
.agents/plugins/: marketplace.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  fixture_request.md  safety_question.md
.github/workflows/: release.yml  tests.yml
claude-desktop-extension/: README.md  manifest.template.json
docs/: README.md  RELEASE.md  agent-friendliness-and-discovery.md  api-examples.md  end-to-end-product-plan.md  execution-plan.md  feature-list.md  github-launch-plan.md  how-to-convert-without-losing-cues.md  how-to-port-one-crate.md  human-workflows.md  legacy-script-audit.md  phase-i-results.md  private-release-checklist.md  product-architecture.md  real-fixtures.md  rekordbox-db-schema.md  rekordbox-xml-concepts.md  reports.md  safety.md  serato-porting.md  testing-fixtures.md  validation-results.md
docs/archive/: github-launch-plan.md  private-release-checklist.md
docs/roadmap/: BACKLOG.md  STATE.md
examples/reports/: simple-fixture.json  simple-fixture.txt  validation-issues.txt
outputs/: initial_milestone.md
src/djlib_doctor/: __init__.py  apply_manifest.py  audio.py  audio_encoding.py  certify.py  cli.py  cli_certify.py  cli_common.py  cli_defaults.py  cli_detect.py  cli_doctor.py  cli_examples.py  cli_fingerprint.py  cli_main.py  cli_menu.py  cli_parser.py  cli_parser_stage.py  cli_port.py  cli_read.py  cli_stage.py  cli_sync.py  collision_policy.py  compare.py  compare_models.py  compatibility.py  compatibility_check.py  compatibility_models.py  compatibility_profiles.py  config.py  cues.py  decision_sheet.py  detect.py  doctor.py  file_operations.py  fingerprint.py  io_utils.py  library_model.py  locations.py  matching.py  path_hygiene.py  (+76 more)
tests/: helpers.py  test_agent_docs.py  test_apply_manifest.py  test_certify.py  test_cli.py  test_compare.py  test_compatibility.py  test_config.py  test_cue_policy.py  test_decision_sheet.py  test_detect.py  test_docs_structure.py  test_doctor.py  test_encrypted_backend_policy.py  test_file_operations.py  test_fingerprint.py  test_library_model.py  test_menu.py  test_packaging.py  test_phase_i_results_docs.py  test_plan.py  test_port_cli_defaults.py  test_port_cue_models.py  test_port_rekordbox.py  test_port_rekordbox_serato.py  test_port_scope_matrix.py  test_port_serato.py  test_port_serato_rekordbox.py  test_port_serato_rekordbox_cues.py  test_real_fixture_layout.py  test_real_rekordbox_db_read.py  test_real_serato_markers2.py  test_rekordbox_cleanup_apply.py  test_rekordbox_convert.py  test_rekordbox_convert_delay.py  test_rekordbox_db_import.py  test_rekordbox_db_read.py  test_rekordbox_db_stage.py  test_rekordbox_encrypted_fixture.py  test_rekordbox_move.py  (+25 more)
(+24 files in other folders)
