[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "djlib-doctor"
version = "0.1.0"
description = "Read-only DJ library verification, cleanup planning, and dry-run porting tools."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "djlib-doctor contributors" }
]
keywords = ["dj", "rekordbox", "serato", "music-library", "verification", "cue-points"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Topic :: Multimedia :: Sound/Audio",
]

[project.optional-dependencies]
audio-tags = ["mutagen>=1.47"]
fingerprint = []
dev = ["pytest>=7"]

[project.scripts]
djlib-doctor = "djlib_doctor.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
