[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "djlib-doctor"
version = "0.1.0"
description = "Read-only DJ library verification, cleanup planning, and dry-run porting tools."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["pyrekordbox>=0.5", "sqlcipher3-wheels>=0.5"]
authors = [
  { name = "Vinayak Ranade", email = "vinayak.ranade@gmail.com" }
]
maintainers = [
  { name = "Vinayak Ranade", email = "vinayak.ranade@gmail.com" }
]
keywords = ["dj", "rekordbox", "serato", "music-library", "verification", "cue-points"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Sound/Audio",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/pseudovirtual/djlib-doctor"
Repository = "https://github.com/pseudovirtual/djlib-doctor"
Issues = "https://github.com/pseudovirtual/djlib-doctor/issues"
Changelog = "https://github.com/pseudovirtual/djlib-doctor/blob/main/CHANGELOG.md"

[project.optional-dependencies]
audio-tags = ["mutagen>=1.47"]
dev = ["pytest>=7", "ruff>=0.8"]

[project.scripts]
djlib-doctor = "djlib_doctor.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py39"
src = ["src", "tests"]
extend-exclude = ["work"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501", "UP045"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
djlib_doctor = ["py.typed"]
